--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^2.1.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^2.0.0
+  build_runner: ^1.0.0
 
 
 # For information on the generic Dart part of this file, see the
