--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^2.0.0
   build_runner: ^1.0.0
+  fluttertoast: ^3.0.1
 
 
 # For information on the generic Dart part of this file, see the
