--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^2.1.0
+  fluttertoast: ^3.0.1
+  flutter_webview_plugin: ^0.3.3
   
 
 dev_dependencies:
@@ -32,7 +34,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^2.0.0
   build_runner: ^1.0.0
-  fluttertoast: ^3.0.1
+ 
 
 
 # For information on the generic Dart part of this file, see the
